# PowerPoint-Layout-and-Style-Consistent-Webpage-Generation-System

./: .gitignore  Introduction.md  PPT生成系统优化计划.md  README.md  app.py  check_html.py  check_ppt.py  config.py  export_ppt.py  index.html  init_db.py  pipeline.py  pyproject.toml  query_db.py  requirements.txt  test_all_templates.py  test_toy_pages.py  下一步的工作.md  需求规约.md
PowerPoint-Layout-and-Style-Consistent-Webpage-Generation-System/: .gitignore  Introduction.md  app.py  check_db.py  check_ending_css3.py  check_json.py  database.py  fix_merge.py  inspect_sk.py  inspect_sk2.py  pipeline.py  regen_template.py  render_preview.py  requirements.txt  skeleton_inspect.txt  test_api.py  test_client_type.py  test_complete_presentation.py  test_dunhuang_gen.py  test_dunhuang_pages.py  test_extract.py  test_extract_step2.py  test_forest_template.py  test_gen_output.py  test_llm_step1.py  test_ocean_theme.py  test_regex.py  test_render_step3.py  test_renderer.py  test_renderer2.py  test_template_compare.py  test_toy_pages.py  科技风.json  需求规约.md
core/: __init__.py  canvas_strategy.py  deepseek_client.py  global_constitution.py  layout_library.py  style_genes.py
demo/: app.py
docs/: CONTENT_PAGE_GENERATION.md  part-1.md
engine/: constraints.py  content.py  reasoning.py  types.py
evaluator/: __init__.py  layout_metrics.py  report.py  style_metrics.py
examples/: parsed_1778169205.json  parsed_1778169392.json  parsed_1778170457.json
framework/: __init__.py  layouts.py  tokens.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
generator/: __init__.py  (+5 more)
(+136 files in other folders)
