[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppt-web-gen"
version = "0.1.0"
description = "PowerPoint-style consistent webpage generation (LLM + templates)"
readme = "Introduction.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3"]
ai = ["langchain-core>=0.2", "langchain-openai>=0.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["framework*", "engine*", "generator*", "evaluator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
